// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdditionalCalendarItemMedia test Render Event Media page 1`] = `
.emotion-0 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-right: 2rem;
  padding-top: 2rem;
}

.emotion-1 {
  direction: ltr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Rubik','Helvetica','Arial';
  font-style: normal;
  font-weight: 400;
  height: 40px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: 0;
  margin-right: 0;
  margin-left: 0;
  max-width: 100%;
  padding-bottom: 0;
  padding-top: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  color: #006DE9;
  font-size: 1rem;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  min-width: 0;
  padding: 0.5rem;
  width: 40px;
}

@media (hover: hover) {
  .emotion-1:hover {
    background-color: rgb(242,248,254);
    color: #004CD6;
  }

  .emotion-1:hover svg {
    fill: #004CD6;
  }
}

.emotion-1:active {
  background-color: #CFE4FC;
  color: #004CD6;
  -webkit-transform: scale(0.96);
  -moz-transform: scale(0.96);
  -ms-transform: scale(0.96);
  transform: scale(0.96);
}

.emotion-1:active svg {
  fill: #004CD6;
}

.emotion-1:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #4494EF;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
}

.emotion-3 {
  width: 1.5rem;
  height: 1.5rem;
  fill: #006DE9;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 2.75rem 12.5rem 4.46rem 12.5rem;
  max-width: 100%;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-5 {
  direction: ltr;
  font-family: 'Rubik','Helvetica','Arial';
  color: rgb(26,32,38);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  border-radius: 10px;
  background-color: rgb(255,255,255);
  box-shadow: 0px 4px 16px -4px rgba(0, 0, 0, 0.10);
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  max-height: 100%;
}

.emotion-6 {
  padding: 1.5rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  min-width: 0;
  -webkit-flex: 1 0 50%;
  -ms-flex: 1 0 50%;
  flex: 1 0 50%;
}

.emotion-8 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow-y: auto;
  min-height: 100%;
}

.emotion-9 {
  margin-top: 0;
  margin-bottom: 16px;
}

.emotion-10 {
  color: rgb(105,113,122);
  margin-bottom: 24px;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: rgb(105,113,122);
  padding-bottom: 0.5rem;
}

.emotion-12 {
  max-width: 16rem;
}

.emotion-13 {
  overflow: hidden;
  aspect-ratio: 1.78;
  position: relative;
  background-color: rgb(247,248,249);
}

.emotion-14 {
  position: absolute;
  top: 0;
  left: 0;
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 100%;
}

.emotion-16 {
  width: 1.5rem;
  height: 1.5rem;
  fill: currentColor;
}

.emotion-17 {
  margin-top: 0.5rem;
  width: 100%;
}

.emotion-19 {
  margin-top: 1rem;
  margin-right: 1rem;
}

.emotion-20 {
  direction: ltr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: 1px solid #006DE9;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Rubik','Helvetica','Arial';
  font-style: normal;
  font-weight: 400;
  height: 36px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: 0;
  margin-right: 0;
  margin-left: 0;
  max-width: 100%;
  padding-bottom: 0;
  padding-top: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  color: #006DE9;
  font-size: 0.875rem;
  padding-left: 1rem;
  padding-right: 1rem;
  min-width: 80px;
}

@media (hover: hover) {
  .emotion-20:hover {
    background-color: rgb(0,106,225);
    color: rgb(255,255,255);
  }

  .emotion-20:hover svg {
    fill: rgb(255,255,255);
  }
}

.emotion-20:active {
  background-color: #004CD6;
  color: rgb(255,255,255);
  -webkit-transform: scale(0.96);
  -moz-transform: scale(0.96);
  -ms-transform: scale(0.96);
  transform: scale(0.96);
}

.emotion-20:active svg {
  fill: rgb(255,255,255);
}

.emotion-20:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #4494EF;
}

.emotion-21 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  margin-right: 0.5rem;
}

.emotion-22 {
  width: 1rem;
  height: 1rem;
  fill: #006DE9;
}

.emotion-23 {
  min-width: 0;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-24 {
  font-size: 0.75rem;
  color: rgb(105,113,122);
  line-height: 1.125rem;
  font-weight: 400;
  margin-bottom: 0.125rem;
  margin-top: 1rem;
}

.emotion-25 {
  font-size: 0.75rem;
  color: rgb(105,113,122);
  line-height: 1.125rem;
  font-weight: 400;
  margin-top: 0rem;
}

.emotion-26 {
  padding-top: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-27 {
  margin-right: 0.625rem;
}

.emotion-30 {
  direction: ltr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgb(0,106,225);
  border: 1px solid transparent;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: default;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Rubik','Helvetica','Arial';
  font-style: normal;
  font-weight: 400;
  height: 36px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: 0;
  margin-right: 0;
  margin-left: 0;
  max-width: 100%;
  padding-bottom: 0;
  padding-top: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  color: rgb(255,255,255);
  opacity: 0.4;
  font-size: 0.875rem;
  padding-left: 1rem;
  padding-right: 1rem;
  min-width: 80px;
}

@media (hover: hover) {
  .emotion-30:hover {
    background-color: #004CD6;
  }
}

.emotion-30:active {
  background-color: #0025BD;
  -webkit-transform: scale(0.96);
  -moz-transform: scale(0.96);
  -ms-transform: scale(0.96);
  transform: scale(0.96);
}

.emotion-30:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #4494EF;
}

.emotion-30 svg {
  fill: rgb(255,255,255);
}

.emotion-30:hover,
.emotion-30:active {
  background-color: rgb(0,106,225);
  opacity: 0.4;
  cursor: default;
  box-shadow: none;
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

<body>
  <div>
    <div>
      <div
        class="emotion-0"
        data-cvent-id="media-file-cancel-icon"
      >
        <a
          aria-label="Close"
          class="emotion-1"
          href="undefined/subscribers/events2/EventCalendar/AdditionalCalendarItemMedia/Index/View?additionalCalendarStub=fecf930c-e6f0-4019-9857-7b135b716f78"
        >
          <span
            class="emotion-2"
          >
            <svg
              aria-hidden="true"
              class="emotion-3"
              focusable="false"
              role="img"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <svg
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M13.4 12l5.3-5.3c.4-.4.4-1 0-1.4-.4-.4-1-.4-1.4 0L12 10.6 6.7 5.3c-.4-.4-1-.4-1.4 0-.4.4-.4 1 0 1.4l5.3 5.3-5.3 5.3c-.4.4-.4 1 0 1.4.2.2.4.3.7.3.3 0 .5-.1.7-.3l5.3-5.3 5.3 5.3c.2.2.5.3.7.3.2 0 .5-.1.7-.3.4-.4.4-1 0-1.4L13.4 12z"
                  />
                </svg>
              </g>
            </svg>
          </span>
        </a>
      </div>
      <div
        class="emotion-4"
      >
        <div
          class="emotion-5"
        >
          <div
            class="emotion-6"
          >
            <div
              class="emotion-7"
            >
              <div
                class="emotion-8"
                data-cvent-id="additional-calendar-item-media-card"
              >
                <h2
                  class="emotion-9"
                >
                  Event Image
                </h2>
                <div
                  class="emotion-10"
                >
                  Add an image for your additional calendar event. This image will be visible on your event calendar.
                </div>
                <div
                  class="emotion-11"
                >
                  Image:
                </div>
                <div>
                  <div
                    class="emotion-12"
                  >
                    <div
                      class="emotion-13"
                    >
                      <div
                        class="emotion-14"
                      >
                        <div
                          aria-label="No image uploaded"
                          class="emotion-15"
                          data-cvent-id="image-icon"
                          role="img"
                          title="No image uploaded"
                        >
                          <svg
                            aria-hidden="true"
                            class="emotion-16"
                            focusable="false"
                            role="img"
                            viewBox="0 0 32 32"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g>
                              <svg
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M19 2H5C3.3 2 2 3.3 2 5v14c0 1.7 1.3 3 3 3h14c1.7 0 3-1.3 3-3V5c0-1.7-1.3-3-3-3zM4 5c0-.6.4-1 1-1h14c.6 0 1 .4 1 1v7.6l-3.3-3.3c-.4-.4-1-.4-1.4 0L4.7 19.9c-.4-.1-.7-.5-.7-.9V5zm15 15H7.4l8.6-8.6 4 4V19c0 .6-.4 1-1 1zM8.5 11C9.9 11 11 9.9 11 8.5S9.9 6 8.5 6 6 7.1 6 8.5 7.1 11 8.5 11zm0-3c.3 0 .5.2.5.5s-.2.5-.5.5-.5-.2-.5-.5.2-.5.5-.5z"
                                />
                                <g
                                  fill-rule="evenodd"
                                >
                                  <use />
                                  <use
                                    fill-rule="nonzero"
                                  />
                                </g>
                              </svg>
                            </g>
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="emotion-17"
                  />
                  <div
                    class="emotion-17"
                  />
                  <div
                    class="emotion-19"
                  >
                    <button
                      class="emotion-20"
                      data-cvent-id="image-upload-button"
                      type="button"
                    >
                      <span
                        class="emotion-21"
                      >
                        <svg
                          aria-hidden="true"
                          class="emotion-22"
                          focusable="false"
                          role="img"
                          viewBox="0 0 32 32"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <g>
                            <svg
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M21 14c-.6 0-1 .4-1 1v4c0 .6-.4 1-1 1H5c-.6 0-1-.4-1-1v-4c0-.6-.4-1-1-1s-1 .4-1 1v4c0 1.7 1.3 3 3 3h14c1.7 0 3-1.3 3-3v-4c0-.6-.4-1-1-1zM7.7 8.7L11 5.4V15c0 .6.4 1 1 1s1-.4 1-1V5.4l3.3 3.3c.2.2.4.3.7.3.3 0 .5-.1.7-.3.4-.4.4-1 0-1.4l-5-5c-.1-.1-.2-.2-.3-.2-.2-.1-.5-.1-.8 0-.1.1-.2.1-.3.2l-5 5c-.4.4-.4 1 0 1.4.4.4 1 .4 1.4 0z"
                              />
                              <g
                                fill-rule="evenodd"
                              >
                                <use />
                                <use
                                  fill-rule="nonzero"
                                />
                              </g>
                            </svg>
                          </g>
                        </svg>
                      </span>
                      <span
                        class="emotion-23"
                      >
                        Upload
                      </span>
                    </button>
                    <label
                      for="uploadImage"
                      hidden=""
                    >
                      Image
                      <input
                        accept=".jpg, .jpeg, .png, .gif"
                        data-cvent-id="image-upload-input"
                        hidden=""
                        id="uploadImage"
                        type="file"
                      />
                    </label>
                  </div>
                  <div>
                    <p
                      class="emotion-24"
                    >
                      Supported file types: JPEG, JPG, PNG. File size up to 5 MB.
                    </p>
                    <p
                      class="emotion-25"
                    >
                      Recommended size: 1280 x 720 pixels. Aspect ratio must be 16:9.
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          class="emotion-26"
        >
          <span
            class="emotion-27"
          >
            <button
              class="emotion-20"
              data-cvent-id="media-cancel-button"
              type="button"
            >
              <span
                class="emotion-23"
              >
                Cancel
              </span>
            </button>
          </span>
          <button
            class="emotion-30"
            data-cvent-id="media-save-button"
            disabled=""
            type="button"
          >
            <span
              class="emotion-23"
            >
              Save
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`AdditionalCalendarItemMedia test Render Event Media page with existing image 1`] = `
.emotion-0 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-right: 2rem;
  padding-top: 2rem;
}

.emotion-1 {
  direction: ltr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Rubik','Helvetica','Arial';
  font-style: normal;
  font-weight: 400;
  height: 40px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: 0;
  margin-right: 0;
  margin-left: 0;
  max-width: 100%;
  padding-bottom: 0;
  padding-top: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  color: #006DE9;
  font-size: 1rem;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  min-width: 0;
  padding: 0.5rem;
  width: 40px;
}

@media (hover: hover) {
  .emotion-1:hover {
    background-color: rgb(242,248,254);
    color: #004CD6;
  }

  .emotion-1:hover svg {
    fill: #004CD6;
  }
}

.emotion-1:active {
  background-color: #CFE4FC;
  color: #004CD6;
  -webkit-transform: scale(0.96);
  -moz-transform: scale(0.96);
  -ms-transform: scale(0.96);
  transform: scale(0.96);
}

.emotion-1:active svg {
  fill: #004CD6;
}

.emotion-1:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #4494EF;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
}

.emotion-3 {
  width: 1.5rem;
  height: 1.5rem;
  fill: #006DE9;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 2.75rem 12.5rem 4.46rem 12.5rem;
  max-width: 100%;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-5 {
  direction: ltr;
  font-family: 'Rubik','Helvetica','Arial';
  color: rgb(26,32,38);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  border-radius: 10px;
  background-color: rgb(255,255,255);
  box-shadow: 0px 4px 16px -4px rgba(0, 0, 0, 0.10);
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  max-height: 100%;
}

.emotion-6 {
  padding: 1.5rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  min-width: 0;
  -webkit-flex: 1 0 50%;
  -ms-flex: 1 0 50%;
  flex: 1 0 50%;
}

.emotion-8 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow-y: auto;
  min-height: 100%;
}

.emotion-9 {
  margin-top: 0;
  margin-bottom: 16px;
}

.emotion-10 {
  color: rgb(105,113,122);
  margin-bottom: 24px;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: rgb(105,113,122);
  padding-bottom: 0.5rem;
}

.emotion-12 {
  max-width: 16rem;
}

.emotion-14 {
  overflow: hidden;
  aspect-ratio: 1.78;
  position: relative;
}

.emotion-15 {
  position: absolute;
  top: 0;
  left: 0;
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.emotion-16 {
  margin-top: 1rem;
  margin-bottom: 0rem;
  font-size: 1rem;
  word-break: break-all;
}

.emotion-17 {
  margin-top: 0.5rem;
  width: 100%;
}

.emotion-19 {
  direction: inherit;
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  min-height: 0;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-20 {
  margin-top: 1rem;
  margin-right: 1rem;
}

.emotion-21 {
  direction: ltr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: 1px solid #006DE9;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Rubik','Helvetica','Arial';
  font-style: normal;
  font-weight: 400;
  height: 36px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: 0;
  margin-right: 0;
  margin-left: 0;
  max-width: 100%;
  padding-bottom: 0;
  padding-top: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  color: #006DE9;
  font-size: 0.875rem;
  padding-left: 1rem;
  padding-right: 1rem;
  min-width: 80px;
}

@media (hover: hover) {
  .emotion-21:hover {
    background-color: rgb(0,106,225);
    color: rgb(255,255,255);
  }

  .emotion-21:hover svg {
    fill: rgb(255,255,255);
  }
}

.emotion-21:active {
  background-color: #004CD6;
  color: rgb(255,255,255);
  -webkit-transform: scale(0.96);
  -moz-transform: scale(0.96);
  -ms-transform: scale(0.96);
  transform: scale(0.96);
}

.emotion-21:active svg {
  fill: rgb(255,255,255);
}

.emotion-21:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #4494EF;
}

.emotion-22 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  margin-right: 0.5rem;
}

.emotion-23 {
  width: 1rem;
  height: 1rem;
  fill: #006DE9;
}

.emotion-24 {
  min-width: 0;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-25 {
  margin-top: 1rem;
  margin-right: 1rem;
}

.emotion-30 {
  margin-top: 1rem;
}

.emotion-35 {
  font-size: 0.75rem;
  color: rgb(105,113,122);
  line-height: 1.125rem;
  font-weight: 400;
  margin-bottom: 0.125rem;
  margin-top: 1rem;
}

.emotion-36 {
  font-size: 0.75rem;
  color: rgb(105,113,122);
  line-height: 1.125rem;
  font-weight: 400;
  margin-top: 0rem;
}

.emotion-37 {
  padding-top: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-38 {
  margin-right: 0.625rem;
}

.emotion-41 {
  direction: ltr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgb(0,106,225);
  border: 1px solid transparent;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: default;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Rubik','Helvetica','Arial';
  font-style: normal;
  font-weight: 400;
  height: 36px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  letter-spacing: 0;
  margin-right: 0;
  margin-left: 0;
  max-width: 100%;
  padding-bottom: 0;
  padding-top: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  transition: background-color cubic-bezier(0, 0, 0.39, 1) 100ms,color cubic-bezier(0, 0, 0.39, 1) 100ms,border-color cubic-bezier(0, 0, 0.39, 1) 100ms,box-shadow cubic-bezier(0.2, 0, 0.4, 0.9) 100ms;
  color: rgb(255,255,255);
  opacity: 0.4;
  font-size: 0.875rem;
  padding-left: 1rem;
  padding-right: 1rem;
  min-width: 80px;
}

@media (hover: hover) {
  .emotion-41:hover {
    background-color: #004CD6;
  }
}

.emotion-41:active {
  background-color: #0025BD;
  -webkit-transform: scale(0.96);
  -moz-transform: scale(0.96);
  -ms-transform: scale(0.96);
  transform: scale(0.96);
}

.emotion-41:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #4494EF;
}

.emotion-41 svg {
  fill: rgb(255,255,255);
}

.emotion-41:hover,
.emotion-41:active {
  background-color: rgb(0,106,225);
  opacity: 0.4;
  cursor: default;
  box-shadow: none;
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

<body>
  <div>
    <div>
      <div
        class="emotion-0"
        data-cvent-id="media-file-cancel-icon"
      >
        <a
          aria-label="Close"
          class="emotion-1"
          href="undefined/subscribers/events2/EventCalendar/AdditionalCalendarItemMedia/Index/View?additionalCalendarStub=fecf930c-e6f0-4019-9857-7b135b716f78"
        >
          <span
            class="emotion-2"
          >
            <svg
              aria-hidden="true"
              class="emotion-3"
              focusable="false"
              role="img"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <svg
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M13.4 12l5.3-5.3c.4-.4.4-1 0-1.4-.4-.4-1-.4-1.4 0L12 10.6 6.7 5.3c-.4-.4-1-.4-1.4 0-.4.4-.4 1 0 1.4l5.3 5.3-5.3 5.3c-.4.4-.4 1 0 1.4.2.2.4.3.7.3.3 0 .5-.1.7-.3l5.3-5.3 5.3 5.3c.2.2.5.3.7.3.2 0 .5-.1.7-.3.4-.4.4-1 0-1.4L13.4 12z"
                  />
                </svg>
              </g>
            </svg>
          </span>
        </a>
      </div>
      <div
        class="emotion-4"
      >
        <div
          class="emotion-5"
        >
          <div
            class="emotion-6"
          >
            <div
              class="emotion-7"
            >
              <div
                class="emotion-8"
                data-cvent-id="additional-calendar-item-media-card"
              >
                <h2
                  class="emotion-9"
                >
                  Event Image
                </h2>
                <div
                  class="emotion-10"
                >
                  Add an image for your additional calendar event. This image will be visible on your event calendar.
                </div>
                <div
                  class="emotion-11"
                >
                  Image:
                </div>
                <div>
                  <div
                    class="emotion-12"
                  >
                    <div
                      class="emotion-12"
                    >
                      <div
                        class="emotion-14"
                        data-cvent-id="uploaded-image"
                      >
                        <img
                          alt="Channel image"
                          class="emotion-15"
                          data-cvent-id="uploaded-image-element"
                          src="https://images-lower.cvent.com/S660/2da33e3f16234feba0923ab05c303415/7fa104b2-b6ca-41b7-b05c-a9da590b8cbf/image/fa91b7f9-6999-426a-8aa3-96d4247e4ed0!_!b4e4bbe435a08944e025e5caf598c56d.jpeg"
                          title="Channel image"
                        />
                      </div>
                    </div>
                    <p
                      class="emotion-16"
                    >
                      TestImage.jpeg
                    </p>
                  </div>
                  <div
                    class="emotion-17"
                  />
                  <div
                    class="emotion-17"
                  />
                  <div
                    class="emotion-19"
                    data-layout="row"
                  >
                    <div
                      class="emotion-20"
                    >
                      <button
                        class="emotion-21"
                        data-cvent-id="image-replace-button"
                        type="button"
                      >
                        <span
                          class="emotion-22"
                        >
                          <svg
                            aria-hidden="true"
                            class="emotion-23"
                            focusable="false"
                            role="img"
                            viewBox="0 0 32 32"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g>
                              <svg
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M21 14c-.6 0-1 .4-1 1v4c0 .6-.4 1-1 1H5c-.6 0-1-.4-1-1v-4c0-.6-.4-1-1-1s-1 .4-1 1v4c0 1.7 1.3 3 3 3h14c1.7 0 3-1.3 3-3v-4c0-.6-.4-1-1-1zM7.7 8.7L11 5.4V15c0 .6.4 1 1 1s1-.4 1-1V5.4l3.3 3.3c.2.2.4.3.7.3.3 0 .5-.1.7-.3.4-.4.4-1 0-1.4l-5-5c-.1-.1-.2-.2-.3-.2-.2-.1-.5-.1-.8 0-.1.1-.2.1-.3.2l-5 5c-.4.4-.4 1 0 1.4.4.4 1 .4 1.4 0z"
                                />
                                <g
                                  fill-rule="evenodd"
                                >
                                  <use />
                                  <use
                                    fill-rule="nonzero"
                                  />
                                </g>
                              </svg>
                            </g>
                          </svg>
                        </span>
                        <span
                          class="emotion-24"
                        >
                          Replace
                        </span>
                      </button>
                      <label
                        for="uploadImage"
                        hidden=""
                      >
                        Image
                        <input
                          accept=".jpg, .jpeg, .png, .gif"
                          data-cvent-id="image-upload-input"
                          hidden=""
                          id="uploadImage"
                          type="file"
                        />
                      </label>
                    </div>
                    <div
                      class="emotion-25"
                    >
                      <button
                        class="emotion-21"
                        data-cvent-id="image-edit-button"
                        type="button"
                      >
                        <span
                          class="emotion-22"
                        >
                          <svg
                            aria-hidden="true"
                            class="emotion-23"
                            focusable="false"
                            role="img"
                            viewBox="0 0 32 32"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g>
                              <svg
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M21.7 7.3l-5-5c-.4-.4-1-.4-1.4 0l-13 13c-.2.2-.3.4-.3.7v5c0 .6.4 1 1 1h5c.3 0 .5-.1.7-.3l13-13c.4-.4.4-1 0-1.4zM7.6 20H4v-3.6l8.8-8.8 3.6 3.6L7.6 20zM17.8 9.8l-3.6-3.6L16 4.4 19.6 8l-1.8 1.8z"
                                />
                              </svg>
                            </g>
                          </svg>
                        </span>
                        <span
                          class="emotion-24"
                        >
                          Edit
                        </span>
                      </button>
                    </div>
                    <div
                      class="emotion-30"
                    >
                      <button
                        class="emotion-21"
                        data-cvent-id="image-delete-button"
                        type="button"
                      >
                        <span
                          class="emotion-22"
                        >
                          <svg
                            aria-hidden="true"
                            class="emotion-23"
                            focusable="false"
                            role="img"
                            viewBox="0 0 32 32"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g>
                              <svg
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M21 5h-4V4c0-1.7-1.3-3-3-3h-4C8.3 1 7 2.3 7 4v1H3c-.6 0-1 .4-1 1s.4 1 1 1h1v13c0 1.7 1.3 3 3 3h10c1.7 0 3-1.3 3-3V7h1c.6 0 1-.4 1-1s-.4-1-1-1zM9 4c0-.6.4-1 1-1h4c.6 0 1 .4 1 1v1H9V4zm9 16c0 .6-.4 1-1 1H7c-.6 0-1-.4-1-1V7h12v13z"
                                />
                                <path
                                  d="M10 10c-.6 0-1 .4-1 1v6c0 .6.4 1 1 1s1-.4 1-1v-6c0-.6-.4-1-1-1zM14 10c-.6 0-1 .4-1 1v6c0 .6.4 1 1 1s1-.4 1-1v-6c0-.6-.4-1-1-1z"
                                />
                              </svg>
                            </g>
                          </svg>
                        </span>
                        <span
                          class="emotion-24"
                        >
                          Delete
                        </span>
                      </button>
                    </div>
                  </div>
                  <div>
                    <p
                      class="emotion-35"
                    >
                      Supported file types: JPEG, JPG, PNG. File size up to 5 MB.
                    </p>
                    <p
                      class="emotion-36"
                    >
                      Recommended size: 1280 x 720 pixels. Aspect ratio must be 16:9.
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          class="emotion-37"
        >
          <span
            class="emotion-38"
          >
            <button
              class="emotion-21"
              data-cvent-id="media-cancel-button"
              type="button"
            >
              <span
                class="emotion-24"
              >
                Cancel
              </span>
            </button>
          </span>
          <button
            class="emotion-41"
            data-cvent-id="media-save-button"
            disabled=""
            type="button"
          >
            <span
              class="emotion-24"
            >
              Save
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
</body>
`;
